# contextAI

./: .cursorrules  .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  civilink_sales_story.md  package-lock.json  requirements.txt  todo.md
.claude/: settings.json
civilink-movie/: analysis-gemini.md  civilinkオンボ　クロスプランニング様 - 2026_02_25 09_55 JST - Gemini によるメモ.md  engineering_tickets.md  gemini_video_analysis.md  memo.md  report_test.intermediate.json  report_test.md  segments.json  segments_template.json  tasks_template.json
civilinkkpi/: 20260328_CS KPI.md  2026plan.md  2026羅針盤
commands/: end-work.sh  setup.sh  start-work.sh
customers/: CiviLinkトライアル（顧客リスト_VOC_開発要望） - Civilink_ユーザー.csv  CiviLinkトライアル（顧客リスト_VOC_開発要望） - 案件一覧.csv  README.md  customer_report_2026-02-11.md  mrr_persona_slides_2026-04-15.html  paid_cs_actions_2026-05-08.md  paid_status_analysis_2026-03-19.md  persona_hypotheses_2026-04-15.md  persona_story_A.md  persona_story_C.md  trial_organizations_enriched.csv  unknown_bucket_triage_2026-04-15.md  引き継ぎ_西日本技術開発_青木様_日本工営_梅木様_2026-04-03.md
docs/: attack-prep-setup-guide.md  boring-analyzer-requirements.md  civilink_chasm_strategy_2026-04-30.md  civilink_chasm_strategy_execution_2026-05-11.md  civilink_chasm_strategy_visual.html  指摘管理の新しい価値.md  (+5 more)
projects/civilink-dwg-parser/: .gitignore  CLEANROOM.md  Cargo.toml  README.md
projects/civilink-dwg-parser/crates/dwg-cli/: Cargo.toml
projects/civilink-dwg-parser/crates/dwg-cli/src/: extract.rs  inspect.rs
projects/civilink-dwg-parser/crates/dwg-core/: Cargo.toml
projects/civilink-dwg-parser/crates/dwg-core/src/: error.rs  lib.rs  version.rs
projects/civilink-dwg-parser/references/format_notes/: 01_file_structure.md  02_header.md  03_section_map.md  04_page_map.md  05_object_map.md  06_objects.md  07_encoding.md  08_bitstream.md  README.md
(+1225 files in other folders)
