[package]
name = "dwg-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core DWG read/write library (clean-room implementation)"

[dependencies]
byteorder.workspace = true
bitvec.workspace = true
flate2.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
# Phase A0-A1 ではまだ使わない、空でOK
